# Nimbos-Blockchain

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/blockchain/: README.md  bloco.rs  cadeia.rs  checkpoint.rs  migrador.rs  mod.rs  validador_cadeia.rs
src/comunicacao/: README.md  broadcast.rs  mod.rs  protocolo.rs  rede.rs  retry.rs
src/consenso/: README.md  mod.rs  tipos.rs
src/consenso/merkle/: README.md  arvore.rs  mod.rs  prova.rs
src/consenso/ordenacao/: README.md  gerador_fila.rs  mod.rs  seed_global.rs
src/consenso/processamento/: README.md  estado.rs  mod.rs  processador.rs  rotacao.rs
src/consenso/registro/: README.md  commitment.rs  mod.rs  validador.rs
src/consenso/reveal/: README.md  fila_aprovados.rs  mod.rs  verificador.rs
src/consenso/validacao/: README.md  deteccao_maliciosos.rs  mod.rs  quorum.rs  validador.rs
src/deteccao_falhas/: README.md  mod.rs
src/recompensas/: README.md  calculadora.rs  distribuidor.rs  ledger.rs  mod.rs
