[package]
name = "nimbos-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Novas dependências para otimização
bincode = "1.3"           # Serialização binária eficiente
rocksdb = "0.21"          # Base de dados embarcada para persistência
lz4_flex = "0.11"         # Compressão LZ4
prost = "0.12"            # Protocol Buffers (opcional)
prost-build = "0.12"      # Build script para protobuf
# Dependências existentes
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"

[build-dependencies]
prost-build = "0.12"